test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-oknil-borrowed.good
init-var-nonnil-borrowed-from-oknil-borrowed.chpl:9: error: cannot assign to non-nilable borrowed MyClass from nilable borrowed MyClass?
